--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
   <div>세븐틴 정한</div>
   <a href="https://www.youtube.com/watch?v=pS57UX6s-xw" target="_blank">세븐틴 신곡 뮤비 보러 가기</a>
   
-  
+  <!--분리용 가로선--><hr>
+
   <h2>좋아하는 노래</h2>
   <small><strike>과거의 제가 cd 리핑을 m4a 파일로 해버린 관계로..... </strike></small> 제가 좋아하는 게임 bgm을 넣었어요.<br>
   <!-- 노래 넣기-->
